--- a/app/src/main/res/layout/activity_wellcome.xml
+++ b/app/src/main/res/layout/activity_wellcome.xml
@@ -4,22 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/wellCome_background"
+    android:id="@+id/wellCome_root"
     tools:context=".wellcome.WellComeActivity">
 
     <ImageView
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:scaleType="fitXY"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="56dp"
         android:src="@mipmap/wellcome_top_ico"
         android:id="@+id/id_wellComeTop_imv"
         />
     <ImageView
-        android:layout_width="280dp"
-        android:layout_height="50dp"
-        android:scaleType="fitXY"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
         android:layout_marginTop="12dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/id_wellComeTop_imv"
         android:src="@mipmap/wellcome_left_text"
@@ -27,15 +29,32 @@
         />
 
     <ImageView
-        android:layout_width="280dp"
-        android:layout_height="50dp"
-        android:scaleType="fitXY"
-        android:layout_marginTop="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        android:padding="4dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginRight="18dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/id_wellComeText1_imv"
         android:src="@mipmap/wellcome_right_text"
         android:id="@+id/id_wellComeText2_imv"
         />
+
+    <com.romainpiel.shimmer.ShimmerTextView
+        android:layout_above="@+id/id_bottom_tv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="欢迎光临邦邦社区"
+        android:textSize="22sp"
+        android:gravity="center"
+        android:textColor="#305050"
+        android:textStyle="bold|italic"
+        android:layout_marginBottom="12dp"
+        android:id="@+id/id_wctxt_shr"
+        />
+
 
 
     <TextView
@@ -46,6 +65,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="24dp"
+        android:visibility="invisible"
         android:id="@+id/id_bottom_tv"
         />
 
