添加侧滑菜单！！！

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="wellCome_background" >#13baba</color>
+    <color name="wellCome_background" >#13BABA</color>
 </resources>
