--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="wellCome_background" >#13BABA</color>
+    <color name="main_color_one" >#4FBCCB</color>
+    <color name="main_color_two" >#44b5c4</color>
+
+    <color name="main_ground_color" >#F0F0F2</color>
+    <color name="title_text_color" >#F4F4F4</color>
+    <color name="foot_text_color" >#E3E3E3</color>
 </resources>
