--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,18 +12,21 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
+    <!-- 主页侧滑菜单样式设置 -->
     <style name="Main_Style" parent="MaterialDrawerTheme.TranslucentStatus">
         <!-- ...and here we setting appcompat’s color theme attrs -->
-        <item name="colorPrimary">@color/wellCome_background</item>
-        <item name="colorPrimaryDark">#D03033</item>
+        <item name="colorPrimary">@color/main_color_one</item>
+        <item name="colorPrimaryDark">@color/main_color_two</item>
         <item name="colorAccent">#02A8F3</item>
 
         <!-- MaterialDrawer specific values -->
+
         <item name="material_drawer_background">@color/material_drawer_dark_background</item>
-        <item name="material_drawer_primary_text">@color/material_drawer_dark_primary_text</item>
+        <item name="material_drawer_primary_text">@color/md_dark_secondary</item>
         <item name="material_drawer_secondary_text">@color/material_drawer_dark_secondary_text
         </item>
+
+
         <item name="material_drawer_hint_text">@color/material_drawer_dark_hint_text</item>
         <item name="material_drawer_divider">@color/material_drawer_dark_divider</item>
         <item name="material_drawer_selected">@color/material_drawer_dark_selected</item>
@@ -36,6 +39,7 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
+    <!-- 欢迎界面主题 -->
     <style name="ActivityWellComeTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/wellCome_background</item>
@@ -46,5 +50,18 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <!-- 底部导航菜单按钮通用样式属性 -->
+    <style name="RadioButton_setting" >
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:button">@null</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:gravity">center_horizontal|bottom</item>
+        <item name="android:drawablePadding">6dp</item>
+        <item name="android:textSize">10sp</item>
+        <item name="android:textColor">@drawable/foot_text_color_select</item>
+    </style>
 
 </resources>
