完成主体界面逻辑，修改底部按钮动态添加达到高清效果

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,17 +10,39 @@
     tools:context="com.lvyerose.sliding.MainActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/layout_top_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:id="@+id/layout_top_main">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay">
+            <ImageView
+                android:layout_width="10dp"
+                android:layout_height="match_parent"
+                android:src="@mipmap/icon_main_top_more"
+                android:scaleType="centerInside"
+                />
+            <com.mikepenz.materialdrawer.view.BezelImageView
+                android:layout_width="46dp"
+                android:layout_height="46dp"
+                android:src="@drawable/defult_user"
+                android:id="@+id/id_user_bimv"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:id="@+id/id_title_tv"/>
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -28,91 +50,80 @@
         android:id="@+id/layout_content_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:layout_above="@+id/id_foot_rgp"
         android:layout_below="@+id/layout_top_main"
-        >
+        android:orientation="horizontal">
 
     </LinearLayout>
+
     <RadioGroup
+        android:id="@+id/id_foot_rgp"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:orientation="horizontal"
-        android:id="@+id/id_foot_rgp"
         android:layout_alignParentBottom="true"
         android:background="@color/main_color_two"
-        >
+        android:orientation="horizontal">
+
         <RadioButton
             android:id="@+id/id_find_gb"
             style="@style/RadioButton_setting"
             android:checked="true"
-            android:drawableTop="@drawable/foot_find_select"
-            android:text="发 现"
-            />
+            android:text="发 现" />
 
         <RadioButton
             android:id="@+id/id_friend_gb"
             style="@style/RadioButton_setting"
-            android:drawableTop="@drawable/foot_friend_select"
-            android:text="好 友"
-            />
+            android:text="好 友" />
 
         <RadioButton
             android:id="@+id/id_add_gb"
             style="@style/RadioButton_setting"
-            android:drawableTop="@drawable/foot_message_select"
-            android:text="消 息"
-            />
+            android:text="消 息" />
 
         <RadioButton
             android:id="@+id/id_message_gb"
             style="@style/RadioButton_setting"
-            android:drawableTop="@drawable/foot_message_select"
-            android:text="消 息"
-            />
+            android:text="消 息" />
 
         <RadioButton
             android:id="@+id/id_helpping_gb"
-            android:drawableTop="@drawable/foot_helpping_select"
             style="@style/RadioButton_setting"
-            android:text="邦 邦"
-            android:textColor="@drawable/foot_text_color_select"
-            />
+            android:text="邦 邦"/>
     </RadioGroup>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="68dp"
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
-        <View
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
 
         <View
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
         <ImageView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:src="@drawable/foot_add_select"
             android:id="@+id/id_add_imv"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:background="@null"
-            />
+            android:src="@drawable/foot_add_select" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            />
+            android:layout_weight="1" />
 
     </LinearLayout>
 </RelativeLayout>
