--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="main_ground_color" >#F0F0F2</color>
     <color name="title_text_color" >#F4F4F4</color>
     <color name="foot_text_color" >#E3E3E3</color>
+
+    <color name="find_top_text">#0DDCFF</color>
 </resources>
