--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -58,6 +58,7 @@
         <item name="android:layout_weight">1</item>
         <item name="android:button">@null</item>
         <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">4dp</item>
         <item name="android:gravity">center_horizontal|bottom</item>
         <item name="android:drawablePadding">6dp</item>
         <item name="android:textSize">10sp</item>
