--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,7 +5,7 @@
 
         <item>好友动态</item>
 
-        <item>社区动态</item>
+        <item>社区问题</item>
 
         <item>热门活动</item>
 
@@ -21,6 +21,64 @@
         <item>消 息</item>
 
         <item>邦 邦</item>
+
+    </string-array>
+
+    <string-array name="datas_friends_message">
+
+        <item>你说你选择从这里开始成长，扬风起航守护最初信仰，你从这里开始荣光，从欢笑到会心闪耀，从最初懵懂年少到生命茁壮。你从这里开始，从这里出发，让自己从无到有，坚强的蓄积力量，步步走出生命的重量。</item>
+        <item>发明家全靠一股了不起的信心支持，才有勇气在不可知的天地中前进。——巴尔扎克</item>
+        <item>一个人需要长大，需要做一个生命的致敬者，去承担生命中的艰辛和苦难，让它成为一种对生命意义的深刻认识，每个人的意志需要更加坚强，需要在历练中视野、胸襟更加宽阔，没有谁不是在坚强和困顿中找到生命的方向，就像每个人必然经历的青春一样，去面对艰辛，给自己一点勇气，让生命更明亮。</item>
+        <item>出门问路，需要勇气；去陌生的地方打拼，需要勇气；第一次登台演讲，需要勇气；对心爱的人说那三个字，需要勇气；挑战极限，实现自我，需要勇气；诸多的第一次，需要勇气；面对强敌，我们更需要勇气。</item>
+        <item>相信自己的力量，不但可以改变任何的不顺遂，只要对自己始终保持信心，不轻易低头，尽自己最大努力去完成任何事，就算事情的最终结果表面是失败的，但只要你转个弯、换个角度看事情，就会知道、体悟到真正的成功，并不在于结果，而是在于过程。</item>
+        <item>在岁月中跋涉，每个人都有自己的故事，看淡心境才会秀丽，看开心情才会明媚。累时歇一歇，随清风漫舞，烦时静一静，与花草凝眸，急时缓一缓，和自己微笑。</item>
+        <item>让我们挥起沉重的铁锤吧！每一下都砸在最稚嫩的部位，当青春逝去，那些部位将生出厚晒太阳的茧，最终成为坚实的石，支撑起我们不再年轻但一定美丽的生命。</item>
+        <item>因为你的信念中有彩虹的出现，为了这一线希望你也要拼搏到底。即便走到最后你一败涂地，也不会……努力过了，该付出的都付出了，即便没有回报，你也无怨无悔，再这个奋斗。拼搏的过程中，也就是你最大的快乐了。人生成败只不过是过眼云烟。</item>
+        <item>人的一生全是靠奋斗，唯有奋斗才能成功。相信自己，我们就是会谱出一段美妙的音符，来唱出我们心中的那首歌。我是一个经常笑的人，可我不是经常开心的人。所有的爱情不能成，原因是有三：开始不给机会；中间不给空间；结局不给宽容。我相信，真正在乎我的人，是不会被别人抢走的。无论是友情还是爱情。</item>
+        <item>每个人都是自己命运的设计师和建筑师，要想有所作为，就不能等待幸运降临。世界上什么事都可以发生，就是不会发生不劳而获的事。好的计划会左右运气，甚至能成功地创造运气。要想让自己好运连连，就必须要精心策划运气。设计运气，就是设计人生。所以，以其等待运气来敲门，不如主动出门去找它。</item>
+        <item>顺境，不要得意，不要狂妄傲慢，喜悦才能够持续；逆境，不要气馁，绝望悲戚，事情还有转机。人生路上，无论怎样，我们都要走下去。荣也好，辱也吧，坦然面对，心平气静，安然于得失，淡然于成败，依旧向前。</item>
+        <item>转身，是另一个起点，换一个角度，你会发现不一样的自己！人的一生，总是失意的时候多，得意的时候少，无论失意还是得意，都要淡定。失意的时候要坦然，得意的时候要淡然。如果说挫折是生命的财富，那么创伤就是前进的动力。谁的人生也不会一帆风顺，以淡然的心面对，成功也只是个时间问题。</item>
+        <item>我们都是自己剧本中的唯一主角，无须用紧凑的剧情和夸张的手法去讲述身外的故事，人的最大悲哀就是不愿做自己。也许把人生的琐碎、冗长、沉闷都融入剧情的冲突，在平凡、平淡乃至平庸中就可彰显生命的张力与厚重。</item>
+        <item>生活不能等别人来安排，要自已去争取和奋斗；而不论其结果是喜是悲，但可以慰藉的是，你总不枉在这世界上活了一场。</item>
+        <item>生活就是这样，你越是想要得到的东西，往往要到你不再追逐的时候才姗姗来迟。有一天，这些都会过去的。想到这结果，我就欣慰。怎么累死人的爱，再怎么累死人的恨，都会过去。失眠，被冤枉，塞车，太穷了，都会过去。被轻蔑，被迫说谎，被迫承认自己改变不了什么，或者，长得不好看，都会过去。</item>
+    </string-array>
+
+    <string-array name="datas_friends_userName">
+
+        <item>蜀汉玫瑰</item>
+        <item>花开花落</item>
+        <item>雨停了便是晴天</item>
+        <item>菜狗</item>
+        <item>每天都是周末</item>
+        <item>昙花一现</item>
+        <item>雨过天晴</item>
+        <item>soul_mate</item>
+        <item>蜀汉玫瑰</item>
+        <item>玫瑰蜀汉</item>
+        <item>野王战神001</item>
+        <item>小菜鸡</item>
+        <item>最后的太阳</item>
+        <item>今天是昨天的明天</item>
+        <item>就活最后一天</item>
+
+    </string-array>
+ <string-array name="datas_friends_city">
+
+        <item>北京 朝阳</item>
+        <item>武汉 某地</item>
+        <item>长沙 宁乡</item>
+        <item>上海 花家地</item>
+        <item>浙江 滁州</item>
+        <item>保密中</item>
+        <item>宁乡 盛景豪庭</item>
+        <item>长沙 橘子洲</item>
+        <item>长沙 橘子洲</item>
+        <item>长沙 橘子洲</item>
+        <item>北京 天安门</item>
+        <item>北京 海淀</item>
+        <item>火星</item>
+        <item>北京 某地</item>
+        <item>地球上</item>
 
     </string-array>
 
