好友动态下拉刷新完成

--- a/app/src/main/res/layout/item_friend_dynamic.xml
+++ b/app/src/main/res/layout/item_friend_dynamic.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/listview_item"
@@ -9,18 +10,21 @@
         android:layout_height="wrap_content"
         android:padding="12dp">
 
-        <com.mikepenz.materialdrawer.view.BezelImageView
-            android:id="@+id/id_item_userImg_bimv"
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/id_item_userImg_sdwv"
             android:layout_width="42dp"
             android:layout_height="42dp"
-            android:src="@drawable/defult_user" />
+            fresco:roundAsCircle="true"
+            fresco:placeholderImage="@drawable/defult_user"
+            />
+
 
         <TextView
             android:id="@+id/id_item_userName_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@+id/id_item_userImg_bimv"
+            android:layout_toRightOf="@+id/id_item_userImg_sdwv"
             android:text="蜀汉玫瑰"
             android:textColor="#7e81d9"
             android:textSize="14sp"
@@ -30,10 +34,10 @@
             android:id="@+id/id_item_userAdders_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/id_item_userImg_bimv"
+            android:layout_alignBottom="@+id/id_item_userImg_sdwv"
             android:layout_below="@+id/id_item_userName_tv"
             android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@+id/id_item_userImg_bimv"
+            android:layout_toRightOf="@+id/id_item_userImg_sdwv"
             android:gravity="center"
             android:text="北京朝阳"
             android:textColor="#ff808080"
@@ -43,7 +47,7 @@
             android:id="@+id/id_item_userTime_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@id/id_item_userImg_bimv"
+            android:layout_alignBottom="@id/id_item_userImg_sdwv"
             android:layout_alignParentRight="true"
             android:layout_marginBottom="4dp"
             android:text="11/11 12:00"
@@ -54,8 +58,8 @@
             android:id="@+id/id_topLine_view"
             android:layout_width="match_parent"
             android:layout_height="0.1dp"
-            android:layout_alignBottom="@+id/id_item_userImg_bimv"
-            android:layout_toRightOf="@+id/id_item_userImg_bimv"
+            android:layout_alignBottom="@+id/id_item_userImg_sdwv"
+            android:layout_toRightOf="@+id/id_item_userImg_sdwv"
             android:background="#66808080" />
 
         <com.ms.square.android.expandabletextview.ExpandableTextView
