--- a/app/src/main/res/layout/fragment_community_dynamic.xml
+++ b/app/src/main/res/layout/fragment_community_dynamic.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -7,11 +8,18 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:textColor="@color/main_color_two"
         android:layout_gravity="center"
         android:gravity="center"
         android:text="社区动态"
+        />
+
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/my_image_view"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        fresco:placeholderImage="@drawable/defult_user"
         />
 
 </LinearLayout>
