--- a/app/src/main/res/layout/item_friend_dynamic.xml
+++ b/app/src/main/res/layout/item_friend_dynamic.xml
@@ -62,15 +62,33 @@
             android:layout_toRightOf="@+id/id_item_userImg_sdwv"
             android:background="#66808080" />
 
+        <com.lvyerose.helpcommunity.widgets.banslidingGv.GrapeGridview
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:numColumns="2"
+            android:scrollbars="none"
+            android:verticalSpacing="6dp"
+            android:horizontalSpacing="6dp"
+            android:stretchMode="columnWidth"
+            android:gravity="center"
+            android:layout_alignLeft="@+id/id_topLine_view"
+            android:layout_below="@+id/id_topLine_view"
+            android:layout_marginTop="12dp"
+            android:id="@+id/id_item_imgs_gdv"
+
+            >
+
+        </com.lvyerose.helpcommunity.widgets.banslidingGv.GrapeGridview>
+
         <com.ms.square.android.expandabletextview.ExpandableTextView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
             android:id="@+id/expand_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/id_topLine_view"
-            android:layout_below="@+id/id_topLine_view"
-            android:layout_marginTop="12dp"
+            android:layout_alignLeft="@+id/id_item_imgs_gdv"
+            android:layout_below="@+id/id_item_imgs_gdv"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="12dp"
             expandableTextView:maxCollapsedLines="5"
             expandableTextView:animDuration="200">
