--- a/app/src/main/res/layout/item_friend_dynamic.xml
+++ b/app/src/main/res/layout/item_friend_dynamic.xml
@@ -70,10 +70,10 @@
             android:verticalSpacing="6dp"
             android:horizontalSpacing="6dp"
             android:stretchMode="columnWidth"
-            android:gravity="center"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="12dp"
             android:layout_alignLeft="@+id/id_topLine_view"
             android:layout_below="@+id/id_topLine_view"
-            android:layout_marginTop="12dp"
             android:id="@+id/id_item_imgs_gdv"
 
             >
