--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -132,25 +132,34 @@
 
         </LinearLayout>
     </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000"
+        android:id="@+id/to_layout"
+        android:visibility="gone"
+        >
 
-    <FrameLayout
+    </LinearLayout>
+    <RelativeLayout
         android:id="@+id/id_main_photo_parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#000000"
         android:visibility="gone">
 
-        <ImageView
-            android:id="@+id/id_main_photo_bg"
+        <com.facebook.drawee.view.SimpleDraweeView
+            xmlns:fresco="http://schemas.android.com/apk/res-auto"
+            android:padding="12dp"
+            android:id="@+id/id_main_photo_sdv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ff000000" />
+            android:scaleType="center"
+            fresco:placeholderImage="@mipmap/icon_placeholder"
+            fresco:placeholderImageScaleType="center"
+            />
 
-        <com.bm.library.PhotoView
-            android:id="@+id/id_main_photo_ptv"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"></com.bm.library.PhotoView>
-
-    </FrameLayout>
+    </RelativeLayout>
 </FrameLayout>
 
 
