--- a/app/src/main/res/layout/fragment_community_dynamic.xml
+++ b/app/src/main/res/layout/fragment_community_dynamic.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -14,7 +14,6 @@
         android:gravity="center"
         android:text="社区动态"
         />
-
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/my_image_view"
         android:layout_width="20dp"
@@ -22,4 +21,15 @@
         fresco:placeholderImage="@drawable/defult_user"
         />
 
-</LinearLayout>
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginLeft="68dp"
+        android:layout_marginTop="148dp"
+        android:src="@drawable/user_01"
+        android:id="@+id/img_1"
+        />
+
+
+
+</RelativeLayout>
