--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,11 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+
+
+    <color name="main_pressed_text">#9C58B6</color>
+
+    <color name="main_base_background" >#13BABA</color>
     <color name="wellCome_background" >#13BABA</color>
     <color name="main_color_one" >#4FBCCB</color>
     <color name="main_color_two" >#44b5c4</color>
