完成登陆界面UI界面及特效 整理已有界面资源文件颜色总为color管理
等待添加联网登陆逻辑(服务器搭建中...)
等待添加Register界面布局

--- a/app/src/main/res/drawable/edittext_bg_fline.xml
+++ b/app/src/main/res/drawable/edittext_bg_fline.xml
@@ -9,7 +9,7 @@
         android:topLeftRadius="8dp"
         android:topRightRadius="8dp" />
 
-    <solid android:color="#1a000000" />
+    <solid android:color="@color/editText_bg_color" />
     <!-- 描边
         虚线属性
      android:dashGap="4dp"
@@ -17,6 +17,6 @@
      -->
     <stroke
         android:width="2dp"
-        android:color="#3834475e" />
+        android:color="@color/editText_bg_stroke_fl_color" />
 
 </shape>  
