--- a/app/src/main/res/drawable/edittext_bg_iline.xml
+++ b/app/src/main/res/drawable/edittext_bg_iline.xml
@@ -9,7 +9,7 @@
         android:topLeftRadius="8dp"
         android:topRightRadius="8dp" />
 
-    <solid android:color="#1a000000" />
+    <solid android:color="@color/editText_bg_color" />
     <!-- 描边
         虚线属性
      android:dashGap="4dp"
@@ -18,6 +18,6 @@
     <stroke
 
         android:width="2dp"
-        android:color="#34475E" />
+        android:color="@color/editText_bg_stroke_il_color" />
 
 </shape>  
