--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    android:background="@color/main_base_background"
+    android:background="@color/login_register_background"
     android:gravity="center_horizontal"
     android:paddingLeft="48dp"
     android:paddingRight="48dp">
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="22dp"
         android:scaleType="fitCenter"
         android:src="@mipmap/icon_login_top" />
 
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/id_login_top_imv"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="14dp"
         android:background="@drawable/login_edittext_bg_select"
         android:gravity="center_vertical"
         android:textColor="@drawable/login_edittext_text_select"
@@ -31,14 +31,14 @@
         android:inputType="number"
         android:maxLength="11"
         android:maxLines="1"
-        android:textColorHint="#e3cecdcd" />
+        android:textColorHint="@color/editText_hint_color" />
 
     <EditText
         android:id="@+id/id_login_password_edt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/id_login_username_edt"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/login_edittext_bg_select"
         android:gravity="center_vertical"
         android:hint="pass...word"
@@ -46,7 +46,57 @@
         android:padding="12dp"
         android:maxLines="1"
         android:maxLength="18"
-        android:textColorHint="#e3cecdcd" />
+        android:textColorHint="@color/editText_hint_color" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/id_login_password_edt"
+        android:layout_marginTop="36dp"
+        android:id="@+id/id_button_liearlt"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="1.5"
+            android:layout_height="wrap_content"
+            android:textColor="@color/login_text_color"
+            android:background="@drawable/login_button_bg"
+            android:layout_marginRight="6dp"
+            android:text="Login"
+            android:id="@+id/id_login_login_btn"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:textColor="@color/login_text_color"
+            android:layout_marginLeft="6dp"
+            android:background="@drawable/register_button_bg"
+            android:text="Register"
+            android:id="@+id/id_login_register_btn"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="12dp"
+        android:layout_alignLeft="@+id/id_login_forgot_tv"
+        android:layout_alignRight="@+id/id_login_forgot_tv"
+        android:layout_above="@+id/id_login_forgot_tv"
+        android:background="#ffffff"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Forgot password?"
+        android:textColor="#ffffff"
+        android:layout_centerHorizontal="true"
+        android:textSize="14sp"
+        android:padding="6dp"
+        android:id="@+id/id_login_forgot_tv"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="16dp"
+        />
 
 
 </RelativeLayout>
