--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -66,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_alignParentBottom="true"
-            android:background="@color/main_color_two"
+            android:background="@color/main_gridView_bg_color"
             android:orientation="horizontal">
 
             <RadioButton
@@ -132,15 +131,6 @@
 
         </LinearLayout>
     </RelativeLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#000000"
-        android:id="@+id/to_layout"
-        android:visibility="gone"
-        >
-
-    </LinearLayout>
     <RelativeLayout
         android:id="@+id/id_main_photo_parent"
         android:layout_width="match_parent"
