--- a/app/src/main/res/drawable/login_edittext_text_select.xml
+++ b/app/src/main/res/drawable/login_edittext_text_select.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true"  android:color="@color/main_pressed_text" />
-    <item android:state_focused="false"  android:color="#ff808080" />
+    <item android:state_focused="true"  android:color="@color/editText_text_foc_color" />
+    <item android:state_focused="false"  android:color="@color/editText_text_normal_color" />
 </selector>
