--- a/app/src/main/res/layout/item_friend_dynamic.xml
+++ b/app/src/main/res/layout/item_friend_dynamic.xml
@@ -26,7 +26,7 @@
             android:layout_marginLeft="8dp"
             android:layout_toRightOf="@+id/id_item_userImg_sdwv"
             android:text="蜀汉玫瑰"
-            android:textColor="#7e81d9"
+            android:textColor="@color/item_username_color"
             android:textSize="14sp"
             android:textStyle="bold" />
 
@@ -40,7 +40,7 @@
             android:layout_toRightOf="@+id/id_item_userImg_sdwv"
             android:gravity="center"
             android:text="北京朝阳"
-            android:textColor="#ff808080"
+            android:textColor="@color/item_address_color"
             android:textSize="12sp" />
 
         <TextView
@@ -51,7 +51,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginBottom="4dp"
             android:text="11/11 12:00"
-            android:textColor="#8183be"
+            android:textColor="@color/item_times_color"
             android:textSize="12sp" />
 
         <View
@@ -60,7 +60,7 @@
             android:layout_height="0.1dp"
             android:layout_alignBottom="@+id/id_item_userImg_sdwv"
             android:layout_toRightOf="@+id/id_item_userImg_sdwv"
-            android:background="#66808080" />
+            android:background="@color/item_divider_color" />
 
         <com.lvyerose.helpcommunity.widgets.banslidingGv.GrapeGridview
             android:layout_width="fill_parent"
@@ -98,7 +98,7 @@
                 android:id="@id/expandable_text"
                 android:textSize="16sp"
                 android:autoText="true"
-                android:textColor="#666666" />
+                android:textColor="@color/item_content_text_color" />
 
             <ImageButton
                 android:id="@id/expand_collapse"
@@ -120,7 +120,7 @@
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
         android:layout_marginTop="8dp"
-        android:background="#66808080" />
+        android:background="@color/item_divider_color" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -147,14 +147,14 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#88808080" />
+            android:background="@color/item_divider_v_color" />
 
         <TextView
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_height="wrap_content"
-            android:textColor="#ff808080"
+            android:textColor="@color/item_bottom_text_color"
             android:padding="8dp"
             android:layout_marginLeft="6dp"
             android:layout_marginRight="6dp"
@@ -169,7 +169,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#88808080" />
+            android:background="@color/item_divider_v_color" />
 
         <ImageButton
             android:layout_width="0dp"
@@ -186,7 +186,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#88808080" />
+            android:background="@color/item_divider_v_color" />
 
         <ImageButton
             android:layout_width="0dp"
