完成注册界面搭建 完成登陆界面基本逻辑控制 等待进一步完善注册界面基本逻辑控制 开始搭建服务器

--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:background="#ffffff"
         app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/find_top_text"
-        app:tabIndicatorColor="@color/find_top_text"
+        app:tabSelectedTextColor="@color/find_top_select_text"
+        app:tabIndicatorColor="@color/find_top_select_text"
         app:tabTextColor="#605f5f"
         app:tabGravity="fill"
         android:fillViewport="false">
