--- a/app/src/main/res/drawable/foot_text_color_select.xml
+++ b/app/src/main/res/drawable/foot_text_color_select.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true"  android:color="#9d55b8" />
-    <item android:state_checked="false"  android:color="#ecf0f1" />
+    <item android:state_checked="true"  android:color="@color/foot_text_select_color" />
+    <item android:state_checked="false"  android:color="@color/foot_text_normal_color" />
 </selector>
