--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -26,7 +26,7 @@
         android:background="@drawable/login_edittext_bg_select"
         android:gravity="center_vertical"
         android:textColor="@drawable/login_edittext_text_select"
-        android:hint="user...name"
+        android:hint="@string/login_username_hint_text"
         android:padding="12dp"
         android:inputType="number"
         android:maxLength="11"
@@ -41,11 +41,12 @@
         android:layout_marginTop="12dp"
         android:background="@drawable/login_edittext_bg_select"
         android:gravity="center_vertical"
-        android:hint="pass...word"
+        android:hint="@string/login_password_hint_text"
         android:textColor="@drawable/login_edittext_text_select"
         android:padding="12dp"
         android:maxLines="1"
         android:maxLength="18"
+        android:inputType="textPassword"
         android:textColorHint="@color/editText_hint_color" />
     <LinearLayout
         android:layout_width="match_parent"
@@ -61,7 +62,7 @@
             android:textColor="@color/login_text_color"
             android:background="@drawable/login_button_bg"
             android:layout_marginRight="6dp"
-            android:text="Login"
+            android:text="@string/login_button_text"
             android:id="@+id/id_login_login_btn"/>
 
         <Button
@@ -71,7 +72,7 @@
             android:textColor="@color/login_text_color"
             android:layout_marginLeft="6dp"
             android:background="@drawable/register_button_bg"
-            android:text="Register"
+            android:text="@string/register_button_text"
             android:id="@+id/id_login_register_btn"/>
 
     </LinearLayout>
