--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
                     android:id="@+id/id_user_bimv"
                     android:layout_width="46dp"
                     android:layout_height="46dp"
-                    android:src="@drawable/defult_user" />
+                    android:src="@drawable/defult_user"/>
 
                 <TextView
                     android:id="@+id/id_title_tv"
@@ -43,7 +43,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/all_appbar_title_color"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </android.support.v7.widget.Toolbar>
