--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,11 +7,14 @@
     <!-- WellCome color-->
     <color name="wellCome_background" >#13BABA</color>
     <!-- main color-->
+    <color name="all_appbar_title_color">#ffffffff</color>
     <color name="main_gridView_bg_color">#44b5c4</color>
     <color name="main_ground_color" >#F0F0F2</color>
     <color name="title_text_color" >#F4F4F4</color>
-    <color name="foot_text_color" >#E3E3E3</color>
-    <color name="find_top_text">#0DDCFF</color>
+    <color name="foot_text_normal_color" >#ecf0f1</color>
+    <color name="foot_text_select_color" >#9d55b8</color>
+    <color name="find_top_select_text">#0DDCFF</color>
+    <color name="find_top_normal_text">#605f5f</color>
     <color name="main_pressed_text">#9C58B6</color>
     <color name="main_base_background" >#13BABA</color>
     <!-- login color-->
@@ -28,6 +31,13 @@
     <color name="login_shape_bg_color">#30000000</color>
     <color name="register_shape_bg_color">#4E6274</color>
     <color name="login_text_color">#F4F4F4</color>
+    <!-- register color-->
+    <color name="user_ic_pic_bg_color">#fc434242</color>
+    <color name="top_hint_text_color">#E9F8F8</color>
+    <color name="send_code_can_color">#4E6274</color>
+    <color name="send_code_cannot_color">#30000000</color>
+    <color name="send_code_can_text_color">#E9F8F8</color>
+    <color name="send_code_cannot_text_color">#E9F8F8</color>
 
     <!-- friendDynamic color-->
     <color name="item_username_color">#7e81d9</color>
